deployment/k8s/test-nginx-service.yaml
# SPDX-License-Identifier: Proprietary
# Copyright (c) 2025 Medhasys LLC
#
# This file contains proprietary code owned by Medhasys LLC.
# Unauthorized copying, modification, or distribution is prohibited.
# See LICENSE file in the server/ directory for details.
#
---
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: ninaivalaigal
  labels:
    app: test-nginx
spec:
  selector:
    app: test-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
